wal-macros/tests/rsx_macro_tests/ifs/if_let_fail.rs
use wal_macros::rsx;

fn main() {
    rsx! { if let };
    rsx! { if let {} };
    rsx! { if let true {}};
    rsx! { if let {} {} };
}
